--- a/sheet1.css
+++ b/sheet1.css
@@ -39,8 +39,8 @@
 h1{
   font-family: 'Kavivanar', cursive;
   font-size: 80px;
-  padding-left:10px;
-  padding-right:10px;
+  margin-left:10px;
+  margin-right:10px;
 }
 
 h2{
