--- a/sheet1.css
+++ b/sheet1.css
@@ -39,8 +39,9 @@
 h1{
   font-family: 'Kavivanar', cursive;
   font-size: 80px;
-  margin-left:10px;
-  margin-right:10px;
+  margin-top:20px;
+  margin-left:20px;
+  margin-right:20px;
 }
 
 h2{
